# vegestrate

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pipeline_grandlyon.py  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
data/: dalles-d-orthophotographie-2023-de-la-metropole-de-lyon.csv  dataset_manifest_VbanneIGN.json  dataset_manifest_grandlyon.json  nuage-de-points-lidar-2023-de-la-metropole-de-lyon.csv
src/core/: __init__.py  common_lidar.py  common_manifest.py  common_ortho.py  parallel_processor.py  utils.py
src/data_preparation/: fetch_wms_from_raster.py  prepare_training_data_IGN.py  prepare_training_data_grandlyon.py  update_manifest_IGN.py  update_manifest_grandlyon.py
src/flairhub_utils/: __init__.py  class_mappings.py  dataset.py  inference.py  model_utils.py  training.py
src/inference/: __init__.py  flair_segmentation.py  inference_flair_context.py
src/postprocessing/: __init__.py  merge_classifications.py  merge_tifs.py  vectorize_raster.py
